# vigil-auditor

./: .dockerignore  .env.example  .gitignore  .golangci.yml  Makefile  README.md  SPEC.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
.cursor/skills/go-analysis/: SKILL.md
.cursor/skills/grill-architect/: SKILL.md
.cursor/skills/improve-architecture/: SKILL.md
api/proto/auditor/v1/: auditor.proto
cmd/gateway/: main.go
deployments/db/: queries.sql  schema.sql
deployments/docker/: Dockerfile.ai  Dockerfile.gateway  Dockerfile.web
internal/gateway/: app.go  app_test.go  audits.go  config.go  jobs.go  session.go  uuidutil.go
pkg/auditorpb/: auditor.pb.go  auditor_grpc.pb.go
pkg/db/: models.go  queries.sql.go
pkg/redactor/: redactor.go  redactor_test.go
services/ai/: pyproject.toml  requirements.txt
services/ai/app/: __init__.py  main.py  servicer.py
services/ai/app/pb/: __init__.py  auditor_pb2.py  auditor_pb2.pyi  auditor_pb2_grpc.py
testdata/statements/: sample_with_pii.csv
web/dashboard/: .gitignore  package-lock.json  package.json
web/dashboard/src/app/: globals.css  layout.tsx  page.tsx
web/dashboard/src/components/: AuditUpload.tsx  GatewayStatus.tsx
web/dashboard/src/lib/: api.ts
