[project]
name = "vigil-ai"
version = "0.0.1"
description = "Vigil AI auditor microservice (gRPC + health HTTP)"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "grpcio==1.71.0",
  "grpcio-tools==1.71.0",
  "protobuf==5.29.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
